--- a/congruences.html
+++ b/congruences.html
@@ -47,11 +47,6 @@
         color: white;
     }
 
-    .red-button {
-        background-color: #e10a0a;
-        color: white;
-    }
-
     .grey-button {
         background-color: #b2b2b2;
         color: black;
@@ -492,7 +487,7 @@
       <table class="button-table">
         <tr>
           <td><button type="button" class="auto-button green-button" id="solve-button" onclick="doEverything();">Solve</button></td>
-          <td><button type="button" class="auto-button red-button" id="clear-button" onclick="clearAll();">Clear</button></td>
+          <td><button type="button" class="auto-button grey-button" id="clear-button" onclick="clearAll();">Clear</button></td>
         </tr>
         <tr>
           <td><button type="button" class="auto-button grey-button" id="solve-button" onclick="setExample(EXAMPLE_1);">Example 1</button></td>
