--- a/congruences.html
+++ b/congruences.html
@@ -443,7 +443,7 @@
         a_nx&\equiv b_n \pmod{m_n}
     \end{aligned}\]
 
-    <p>for \( n\in\mathbb{N}, a_i,b_i,m_i\in \mathbb{Z}, m_i\neq 0\). If there is a solution, it will be a congruence \(x=S \pmod{M}\), which the solver will return. If there is no solution, the solver will report which congruences are unsolvable or irreconcilable.</p>
+    <p>for \( n\in\mathbb{N}, a_i,b_i,m_i\in \mathbb{Z}, m_i\neq 0\). If there is a solution, it will be a congruence \(x=S \pmod{M}\), which the solver will return. If there is no solution, the solver will report which congruences are unsolvable or pairwise irreconcilable.</p>
 
     <div class="auto-div">
       <table class="num-input-table">
@@ -508,13 +508,13 @@
         x \equiv ub' \pmod{m'}\text{.}
     \]
 
-    <p>Suppose then that all congruences can be individually solved in the form \(x\equiv c \pmod{m'}\). Consider a pair of congruences \(x\equiv c_i \pmod{m'_i}\) and \(x\equiv c_j \pmod{m'_j}\) and let \(g=\gcd(m'_i,m'_j)\). If \(c_i \not\equiv c_j \pmod{g}\), the pair has no joint solution and is said to be <em>irreconcilable</em>. Otherwise, let \(m^\ast_i=m'_i/g\), \(m^\ast_j=m'_j/g\), and use extended Euclidean division to find \(p,q\in \mathbb{Z}\) satisfying \(m_i^\ast p + m_j^\ast q = 1\). Then let \(e=c_im_j^\ast q + c_jm_i^\ast p\) and \(\ell=\operatorname{lcm}(m'_i,m'_j)\). The solutions to the pair are then exactly those integers \(x\) of the form</p>
+    <p>Suppose then that all congruences can be individually solved in the form \(x\equiv c \pmod{m'}\). Consider a pair of congruences \(x\equiv c_i \pmod{m'_i}\) and \(x\equiv c_j \pmod{m'_j}\) and let \(g=\gcd(m'_i,m'_j)\). If \(c_i \not\equiv c_j \pmod{g}\), the pair has no joint solution and is said to be irreconcilable. Otherwise, let \(m^\ast_i=m'_i/g\), \(m^\ast_j=m'_j/g\), and use extended Euclidean division to find \(p,q\in \mathbb{Z}\) satisfying \(m_i^\ast p + m_j^\ast q = 1\). Then let \(e=c_im_j^\ast q + c_jm_i^\ast p\) and \(\ell=\operatorname{lcm}(m'_i,m'_j)\). The solutions to the pair are then exactly those integers \(x\) of the form</p>
 
     \[
         x\equiv e \pmod{\ell}\text{.}
     \]
 
-    <p>In general, the system of congruences \(x\equiv c_i \pmod{m'_i}\) has a solution if and only if all congruences are pairwise reconcilable. If so, then the overall solution may be obtained by iterating the process for pairs on successive elements. In particular the overall modulus is \(\operatorname{lcm}(m_1',\ldots,m_n')\).</p>
+    <p>In general, the system of congruences \(x\equiv c_i \pmod{m'_i}\) has a solution if and only if all congruences are pairwise reconcilable. If so, then the overall solution may be obtained by iterating the process for pairs on successive elements. We can treat systems of \(1\) or \(0\) congruences without special cases by folding this process starting from the identity congruence \(x\equiv 0 \pmod{1}\). This method is known as the <strong>generalised Chinese remainder theorem</strong>.</p>
 
     <p>The solver normalises all congruences \(x=c \pmod{m}\) so that \(m\geq 1\) and \(0\leq c < m\).</p>
   </div>
